<resources>
    <string name="app_name"></string>
    <string name="et_email_address">Email Address</string>
    <string name="logo">logo</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_search">Search</string>
    <string name="btn_generate">Generate</string>
    <string name="btn_new_estimate">New Estimate</string>
    <string name="btn_register">Register</string>
    <string name="login_email">Email</string>
    <string name="login_paasword">Password</string>
    <string name="login_bottom_img">bottom img</string>
    <string name="login_top_img">top img</string>
    <string name="login_lost_password"><a href="http://www.twitter.com">Forgot Password</a></string>
    <string name="login_create_account">Create Account</string>
    <string name="et_email">Email</string>
    <string name="title_activity_my_estimates">MyEstimates</string>
    <string name="et_new_cust_custName">Customer Name</string>
    <string name="et_new_cust_company">Company</string>
    <string name="et_new_cust_custID">Customer ID</string>
    <string name="et_new_cust_contact_name">Contact Name</string>
    <string name="et_new_cust_phone">Customer Phone</string>
    <string name="estimates">Estimates</string>
    <string name="estimates_estimateID">Estimate ID</string>
    <string name="estimates_search_customer">Search Customers</string>
    <string name="add_new_estimate">Add New Estimate</string>
    <string name="et_new_estimate_title">Title</string>
    <string name="et_new_estimate_due_date">Due Date</string>
    <string name="et_new_estimate_shirt_sizes">Shirt Sizes</string>
    <string name="et_new_estimate_description">Description</string>
    <string name="et_new_estimate_notes">Notes</string>
    <string name="et_new_estimate_quantity">Quantity</string>
    <string name="et_new_estimate_shop_base_charge">Shop Base Charge</string>
    <string name="et_new_estimate_per_piece_price">Per Piece Charge</string>
    <string name="et_new_estimate_screen_charge">Screen Charge</string>
    <string name="et_new_estimate_num_colors">Number of Colors</string>
    <string name="et_new_estimate_print_both_sides">2 Sided Print</string>
    <string name="et_new_estimate_total_price">Total Price</string>
    <string name="btn_new_estimate_calculate">Calculate</string>
    <string name="row_item_tv_title">Estimate Title</string>
    <string name="title_activity_estimates">activity_estimates</string>
    <string name="fragment_estimates">Estimates</string>
    <string name="fragment_new_customer">New Customer</string>
    <string name="fragment_new_estimate">New estimate</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_view_estimates">View Estimates</string>
    <string name="et_new_cust_company_id">Company ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lost_pass_send">SEND</string>
    <string name="forgot_pass_email">Email</string>

</resources>
