<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suncoastsoftware.estimateepro.New_Estimate_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/gradient_background">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="238dp"
                android:layout_height="54dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/logo" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/login_top_img"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/gradient_background" />

        </FrameLayout>


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/login_bottom_img" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_estimate_layout_input"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/defualt_layout_background"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_new_estimate"
            android:textAlignment="center"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_estimate_estimateID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/estimates_estimateID"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_new_estimate_custID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/et_new_cust_custID"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_new_estimate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_title"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_new_estimate_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_description"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_new_estimate_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_notes"
                android:textSize="16sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_estimate_due_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_due_date"
                android:inputType="date"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_new_estimate_shirt_sizes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_shirt_sizes"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_estimate_quantity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_quantity"
                android:inputType="date"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_new_estimate_shop_base_charge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_shop_base_charge"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_estimate_per_piece_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_per_piece_price"
                android:inputType="date"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_new_estimate_screen_charge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_screen_charge"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_estimate_num_colors"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_num_colors"
                android:inputType="date"
                android:textSize="16sp"/>
            <CheckBox
                android:id="@+id/cb_new_estimate_both_sides"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/et_new_estimate_print_both_sides"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_estimate_total_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/et_new_estimate_total_price"
                android:inputType="date"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

            </LinearLayout>
            <Button
                android:id="@+id/btn_new_estimate_calculate"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/btn_new_estimate_calculate"
                android:background="@drawable/btn_rnd_corners_red"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_margin="6dp">

            <Button
                android:id="@+id/new_estimate_btn_save"
                android:text="@string/btn_save"
                android:layout_marginRight="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rnd_corners"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/new_estimate_btn_cancel"
                android:text="@string/btn_cancel"
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rnd_corners"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
