<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.suncoastsoftware.estimateepro.Activity_New_Customer"
android:background="@color/default_background"
    android:id="@+id/new_customer_layout">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="238dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/login_top_img"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/gradient_background" />

    </FrameLayout>


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/login_bottom_img" />
</LinearLayout>

<LinearLayout
    android:id="@+id/new_cust_layout_input"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/defualt_layout_background"
    android:padding="20dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Add New Customer"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_new_cust_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_new_cust_company"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_new_cust_custID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/et_new_cust_custID" />

        <Button
            android:id="@+id/new_cust_btn_generate"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_generate"
            android:background="@color/colorSecondaryAccent"
            android:layout_weight="1"/>
    </LinearLayout>


    <EditText
        android:id="@+id/et_new_cust_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_new_cust_contact_name"
         />

    <EditText
        android:id="@+id/et_new_cust_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_new_cust_phone"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="6dp">

        <Button
            android:id="@+id/new_cust_btn_save"
            android:text="@string/btn_save"
            android:layout_marginRight="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rnd_corners" />

        <Button
            android:id="@+id/new_cust_btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_marginLeft="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rnd_corners" />

    </LinearLayout>


</LinearLayout>

</RelativeLayout>