<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suncoastsoftware.estimateepro.MainActivity"
    android:background="@color/default_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:background="@drawable/gradient_background">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="238dp"
                android:layout_height="92dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/logo" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/login_top_img"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/gradient_background" />

        </FrameLayout>


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/login_bottom_img" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_input"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/defualt_layout_background"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_paasword"
            android:inputType="textPassword" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_margin="6dp">

            <Button
                android:id="@+id/btn_login"
                android:text="@string/btn_login"
                android:layout_marginRight="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_rnd_corners" />

            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/btn_cancel"
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_rnd_corners" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_weight="1"
                android:linksClickable="true"
                android:text="@string/login_lost_password"
                android:textColor="@color/colorSecondaryAccent"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_weight="1"
                android:linksClickable="true"
                android:text="@string/login_create_account"
                android:textColor="@color/colorSecondaryAccent"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgot_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reset Password"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SEND EMAIL"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
