<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="12dp"
    android:padding="10dp"

    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/row_item_tv_estimate_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimates_estimateID"
                    android:padding="6dp"
                    android:layout_weight="1"
                   />

                <TextView
                    android:id="@+id/row_item_tv_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/et_new_cust_company"
                    android:padding="6dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/row_item_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/row_item_tv_title"
                android:padding="6dp"/>

            <TextView
                android:id="@+id/row_item_tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_new_estimate_total_price"
                android:padding="6dp"/>

        </LinearLayout>
</android.support.v7.widget.CardView>
